objects/B2B_SPC_Delivery_Method__mdt.object
<CustomObject>
    <description>What: B2B Commerce for Delivery Methods</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Other Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <label>Provider Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <label>Service Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Shipment Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>B2B SPC Delivery Method</label>
    <pluralLabel>B2B SPC Delivery Methods</pluralLabel>
</CustomObject>